Fix error text being unreadable against light background

--- a/WeddingWebsite/Components/Layout/MainLayout.razor.css
+++ b/WeddingWebsite/Components/Layout/MainLayout.razor.css
@@ -80,6 +80,7 @@
     position: fixed;
     width: 100%;
     z-index: 1000;
+    color: black;
 }
 
     #blazor-error-ui .dismiss {
